Fixing localized multilanguage element style so that text aligns vertically centered.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -127,6 +127,7 @@ div.localized {
   div.localization {
 
     float: left;
+    padding: 1% 0;
     width: calc(100% - #{$language-width});
     min-height: $language-height;
     padding-left: 10px;
